[package]
name = "guessing_game_squared"
version = "2.0.0"
authors = ["GitSquared <GitSquared@users.noreply.github.com>"]
license = "WTFPL"
description = "An attempt at learning Rust"
homepage = "https://github.com/GitSquared/guessing_game"
repository = "https://github.com/GitSquared/guessing_game"
readme = "README.md"
publish = false

[[bin]]
name = "guessing_game"
path = "src/guess.rs"


[dependencies]
rand = "0.8.5"
colored = "2.0.0"
meval = "0.2.0"
